--- a/LESSON-02 (Components)/src/App.css
+++ b/LESSON-02 (Components)/src/App.css
@@ -1,38 +1,31 @@
-.App {
+.header{
+  background-color: aqua;
+  width: 100%;
   text-align: center;
+  color:slateblue;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar{
+  display: flex;  
+  justify-content: flex-end;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a:link{
+  text-decoration: none;
+  background-color: rgb(202, 64, 64);
+  color: white;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+a:hover{
+  background-color: slateblue;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a{
+  color: white;
+  padding: 5px;
+  margin: 10px;
+  border-radius: 5px;
+  
 }
